--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f8fa;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bg-custom {
+  background-color: black !important;
+  color: white !important;
+}
+
+.nav-link {
+  color: #fff !important;
+}
+
+.btn-default-outline {
+  color: #000 !important;
+  background-color: transparent;
+  border-color: #000;
+  width: 200px;
+  border-radius: 50px;
+}
+
+.btn-default-outline:hover {
+  color: #fff !important;
+  background-color: #000;
+  box-shadow: none;
+}
+
+.forgot:hover {
+  color: #000 !important;
+}
+
+.login {
+  color: #000;
+}
+
+.user-icon {
+  font-size: 60px;
+  color: #C0C0C0;
+}
+
+.avatar {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+}
+
+.share {
+  margin: 0px auto 10px auto;
 }
